--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "develop",
   "version": "1.0.0",
-  "description": "",
+  "description": "Mod 8 challenge",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
@@ -9,14 +9,22 @@
     "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jossie Haven",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.19",
+    "inquirer": "^9.3.7",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.12.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JossieHaven/vehicle-builder-mod8c.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JossieHaven/vehicle-builder-mod8c/issues"
+  },
+  "homepage": "https://github.com/JossieHaven/vehicle-builder-mod8c#readme"
 }
